# Super_Trunfo

./: .gitignore  CMakeLists.txt  baralho.cpp  baralho.hpp  carta.cpp  carta.hpp  jogo.cpp  jogo.hpp  main_supertrunfo.cpp  roda_o_jogo.cpp  supertrunfo.cpp  supertrunfo.hpp
